# Stratego

./: Cargo.toml  rust-toolchain.toml  server.bat  web.bat
common/: Cargo.toml
common/src/: game_logic.rs  lib.rs  request.rs  utils.rs
server/: Cargo.toml
server/src/: api.rs  main.rs  util.rs  web_app.rs
web/: Cargo.toml  index.html  index.scss
web/src/: common.rs  common_comps.rs  game.rs  home.rs  main.rs  select_game.rs
web/src/game/: mod.rs  utils.rs
web/static/assets/temp/blue/: blue grid.xcf
web/static/assets/temp/red/: red grid.xcf
