[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
gloo-net = { version = "0.2", optional = true }

[features]
client = ["dep:gloo-net"]
