[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
common = { path = "../common" }
anyhow = "1.0"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1.0.153", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
