[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
common = { path="../common", features = ["client"] }
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.17"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
serde = { version = "1.0.153", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "js"] }
anyhow = "1.0"
serde_json = "1.0.94"





